@@ -21,6 +21,7 @@ Date:
         - Add related recipes to the Link Summary screen.
     Fixes:
         - (regression) Legacy summary pages could not be saved or loaded.
+        - Quality bonuses/penalties in beacons were not handled correctly.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.8.1
 Date: February 20th 2025
